--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>mapmi</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <style>
+      body, html, #map {
+        width: 100%;
+        height: 100%;
+        margin:0;
+        font-family: Source Sans Pro, Helvetica, sans-serif;
+      }
+    </style>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
   </head>
   <body>
+    <div id="map"></div>
     <app></app>
     <!-- built files will be auto injected -->
   </body>
