--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         font-family: Source Sans Pro, Helvetica, sans-serif;
       }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
+    <script src="/static/LuShu.js"></script>
   </head>
   <body>
     <div id="map"></div>
