--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>mapmi</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <style>
       body, html, #map {
         width: 100%;
@@ -13,7 +13,7 @@
       }
     </style>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
-    <script src="/static/LuShu.js"></script>
+    <script src="./static/LuShu.js"></script>
   </head>
   <body>
     <div id="map"></div>
