--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         margin:0;
         font-family: Source Sans Pro, Helvetica, sans-serif;
       }
+      html {
+        -webkit-touch-callout:none;
+        -webkit-user-select:none;
+        -khtml-user-select:none;
+        -moz-user-select:none;
+        -ms-user-select:none;
+        user-select:none;
+      }
     </style>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
     <script src="./static/LuShu.js"></script>
