--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>mapmi</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <style>
-      body, html, #map {
+<!DOCTYPE html><html><head><title>mapmi</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><style>body, html, #map {
         width: 100%;
         height: 100%;
         margin:0;
@@ -18,14 +11,4 @@
         -moz-user-select:none;
         -ms-user-select:none;
         user-select:none;
-      }
-    </style>
-    <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
-    <script src="./static/LuShu.js"></script>
-  </head>
-  <body>
-    <div id="map"></div>
-    <app></app>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.c21c053e3f414858556e31cc0eb141f3.css rel=stylesheet></head><body><div id=map></div><app></app><script src=./static/app.c126927ffe75f14eeb6e.js></script></body></html>
