--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>mapmi</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <style>
       body, html, #map {
         width: 100%;
         height: 100%;
         margin:0;
+        overflow: hidden;
         font-family: Source Sans Pro, Helvetica, sans-serif;
       }
       html {
