--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html><html><head><title>mapmi</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><style>body, html, #map {
-        width: 100%;
-        height: 100%;
-        margin:0;
+<!DOCTYPE html><html><head><title>mapmi</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=apple-mobile-web-app-capable content=yes><style>html body {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
+        overflow: hidden;
+        margin: 0;
         font-family: Source Sans Pro, Helvetica, sans-serif;
-      }
-      html {
-        -webkit-touch-callout:none;
-        -webkit-user-select:none;
-        -khtml-user-select:none;
-        -moz-user-select:none;
-        -ms-user-select:none;
-        user-select:none;
-      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.f7af89156a3e27ec00dedbb8754e1359.css rel=stylesheet></head><body><div id=map></div><app></app><script src=./static/app.0c61d115a391c9accd32.js></script></body></html>
+      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.5aca2954e6ef99f69ab49c11da913b52.css rel=stylesheet></head><body><app></app><script src=./static/app.e96333ad9fc8c23cdeda.js></script></body></html>
