--- a/index.html
+++ b/index.html
@@ -6,27 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <style>
-      body, html, #map {
+      * {
+        border: 0;
+        margin: 0;
+      }
+      
+      html body {
         width: 100%;
         height: 100%;
-        margin:0;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
         overflow: hidden;
         font-family: Source Sans Pro, Helvetica, sans-serif;
-      }
-      html {
-        -webkit-touch-callout:none;
-        -webkit-user-select:none;
-        -khtml-user-select:none;
-        -moz-user-select:none;
-        -ms-user-select:none;
-        user-select:none;
       }
     </style>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
     <script src="./static/LuShu.js"></script>
   </head>
   <body>
-    <div id="map"></div>
     <app></app>
     <!-- built files will be auto injected -->
   </body>
