--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html><html><head><title>mapmi</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=apple-mobile-web-app-capable content=yes><style>html body {
+<!DOCTYPE html><html><head><title>mapmi</title><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=apple-mobile-web-app-capable content=yes><style>* {
+        border: 0;
+        margin: 0;
+      }
+      
+      html body {
+        width: 100%;
+        height: 100%;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
         overflow: hidden;
-        margin: 0;
         font-family: Source Sans Pro, Helvetica, sans-serif;
-      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.5aca2954e6ef99f69ab49c11da913b52.css rel=stylesheet></head><body><app></app><script src=./static/app.e96333ad9fc8c23cdeda.js></script></body></html>
+      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.7e40136d9b269ded5707f25cfd1f12a4.css rel=stylesheet></head><body><app></app><script src=./static/app.6176016b4c55cfd3c914.js></script></body></html>
