--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>mapmi</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="./static/amazeui.css">
     <style>
       body, html, #map {
         width: 100%;
@@ -20,6 +21,9 @@
         user-select:none;
       }
     </style>
+    <link rel="stylesheet" href="./static/style.css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/amazeui.min.js"></script>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script>
     <script src="./static/LuShu.js"></script>
   </head>
