--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin: 0;
       }
       
-      html body {
+      html, body {
         width: 100%;
         height: 100%;
         -webkit-touch-callout: none;
