--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         -webkit-user-select: none;
         user-select: none;
         overflow: hidden;
+        background-color:#ececec;
         font-family: Source Sans Pro, Helvetica, sans-serif;
       }
     </style>
