--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
         margin: 0;
       }
       
-      html body {
+      html, body {
         width: 100%;
         height: 100%;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
         overflow: hidden;
+        background-color:#ececec;
         font-family: Source Sans Pro, Helvetica, sans-serif;
-      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.7e40136d9b269ded5707f25cfd1f12a4.css rel=stylesheet></head><body><app></app><script src=./static/app.6176016b4c55cfd3c914.js></script></body></html>
+      }</style><script src="http://api.map.baidu.com/api?v=2.0&ak=1q6c0I5j737HGQfuUkHvLu6HSbgKUjuY"></script><script src=./static/LuShu.js></script><link href=./static/app.946e792c9011ea323c19c494ce2e4dba.css rel=stylesheet></head><body><app></app><script src=./static/app.e539c712de80d558fc12.js></script></body></html>
